<resources>
    <string name="app_name">ZeroToSixty</string>
    <string name="go_button">Begin</string>
    <string name="stop_button">Stop</string>
    <string name="reset_button">Reset</string>
    <string name="calibrate_button">Calibrate</string>
    <string name="combined_label">Overall</string>
    <string name="accel_label">Accel (G)</string>
    <string name="speed_label">Speed (mph)</string>
    <string name="x_label">X</string>
    <string name="y_label">Y</string>
    <string name="z_label">Z</string>
    <string name="axis_label">Axis</string>
    <string name="initial_time">0.00</string>
    <string name="hints">----</string>
    <string name="results_label">Results</string>
    <string name="max_accel_label">Max Accel</string>
    <string name="time_to_60">Time to 60</string>
    <string name="stop_text">Stop</string>
    <string name="ok">Got it</string>
    <string name="orient">Orient</string>
</resources>
