<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.example.andsorensen.zerotosixty.MainActivity">
    <LinearLayout
        android:id="@+id/controlsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10sp">
        <Button
            android:id="@+id/goButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_button"
            android:background="@color/colorAccent"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:onClick="beginTimer"
            />
        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_button"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:layout_marginStart="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:onClick="resetTimer"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calibrate_button"
            android:background="@color/colorAccent"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:onClick="calibrateAccelerometer"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/columnHeaders"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/controlsLayout"
        android:gravity="center_horizontal"
        android:layout_marginBottom="5sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/axis_label"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/accel_label"
            android:textAlignment="center"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/speed_label"
            android:textAlignment="center"
            android:textStyle="bold"
            />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/outputRows"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@id/columnHeaders"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/xOutputRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="5sp">
            <TextView
                android:id="@+id/xRowLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:textSize="15sp"
                android:textAlignment="center"
                android:text="@string/x_label"/>
            <TextView
                android:id="@+id/xAccel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textAlignment="center"
                android:hint="@string/hints"/>
            <TextView
                android:id="@+id/xSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textAlignment="center"
                android:hint="@string/hints"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/yOutputRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_below="@id/xOutputRow"
            android:layout_marginBottom="5sp">
            <TextView
                android:id="@+id/yRowLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:textSize="15sp"
                android:textAlignment="center"
                android:text="@string/y_label"/>
            <TextView
                android:id="@+id/yAccel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textAlignment="center"
                android:hint="@string/hints"/>
            <TextView
                android:id="@+id/ySpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textAlignment="center"
                android:hint="@string/hints"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/zOutputRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/yOutputRow"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="5sp">
            <TextView
                android:id="@+id/zRowLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:textSize="15sp"
                android:textAlignment="center"
                android:text="@string/z_label"/>
            <TextView
                android:id="@+id/zAccel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textAlignment="center"
                android:hint="@string/hints"/>
            <TextView
                android:id="@+id/zSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textAlignment="center"
                android:hint="@string/hints"/>
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/timerValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/outputRows"
        android:layout_marginBottom="5sp"
        android:text="@string/initial_time"
        android:textSize="45sp"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/combinedLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timerValue"
        android:layout_marginBottom="5sp"
        android:text="@string/combined_label"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textAlignment="center"/>
    <RelativeLayout
        android:id="@+id/combinedOutput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/combinedLabel"
        android:gravity="center_horizontal">
        <LinearLayout
            android:id="@+id/aOutputRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="5sp">
            <TextView
                android:id="@+id/accelLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/accel_label"/>
            <TextView
                android:id="@+id/accelValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:hint="@string/hints"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/sOutputRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/aOutputRow"
            android:gravity="center_horizontal"
            android:layout_marginBottom="5sp">
            <TextView
                android:id="@+id/speedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/speed_label"/>
            <TextView
                android:id="@+id/speedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:hint="@string/hints"/>
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/resultsLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/combinedOutput"
        android:layout_marginBottom="5sp"
        android:text="@string/results_label"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textAlignment="center"/>
    <RelativeLayout
        android:id="@+id/resultsOutput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resultsLabel"
        android:layout_marginBottom="5sp"
        android:gravity="center_horizontal">
        <LinearLayout
            android:id="@+id/accelResults"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="5sp">
            <TextView
                android:id="@+id/maxAccelLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/max_accel_label"/>
            <TextView
                android:id="@+id/maxAccelValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:hint="@string/hints"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/timeToSixtyResults"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/accelResults"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/timeToSixtyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/time_to_60"/>
            <TextView
                android:id="@+id/timeToSixtyValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textAlignment="center"
                android:hint="@string/hints"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>


